# HIPractice

./: .gitignore  CMakeLists.txt  CUMaskPower.cpp  Host.c  Host.cpp  Host_nostream.cpp  Host_pthreads.cpp  Makefile  a.out  build.sh  matrix2.txt  matrix3.txt  matrixFill.cpp  param.json  param.txt  results.json
